fix: gap

--- a/assets/scss/loop.scss
+++ b/assets/scss/loop.scss
@@ -23,6 +23,7 @@
   .wp-block-columns {
     margin-bottom: 0;
     align-items: stretch;
+    gap: 0;
   }
   .wp-block-column {
     position: relative;
